fix flight segment's layout z-index

--- a/src/style-flight-segment.scss
+++ b/src/style-flight-segment.scss
@@ -31,7 +31,7 @@
   align-items: center;
   justify-content: center;
   flex-direction: column;
-  z-index: 2;
+  z-index: 1;
   width: 100%;
 }
 
